--- a/src/scss/utilities/_repel.scss
+++ b/src/scss/utilities/_repel.scss
@@ -3,4 +3,5 @@
 	justify-content: space-between;
 	flex-wrap: wrap;
 	gap: var(--gutter);
+	align-items: var(--repel-vertical-alignment, center);
 }
