--- a/src/scss/abstract/_variables_colors.scss
+++ b/src/scss/abstract/_variables_colors.scss
@@ -1,5 +1,10 @@
 // Couleurs
 
-$color-paper: hsl(210, 100%, 40%);
-$color-ink: hsl(255, 100%, 100%);
-$color-primary: hsl(59, 90%, 50%);
+$color-black: hsl(0, 0%, 0%);
+$color-green: hsl(90, 100%, 61%);
+$color-yellow: hsl(59, 90%, 50%);
+$color-white: hsl(255, 100%, 100%);
+$color-ink: $color-white;
+$color-light: $color-white;
+$color-paper: $color-black;
+$color-primary: $color-green;
