--- a/src/scss/theme/_index.scss
+++ b/src/scss/theme/_index.scss
@@ -3,14 +3,16 @@
 @use "utopia-space";
 
 :root {
+	--color-black: #{colors.$color-black};
+	--color-ink: #{colors.$color-ink};
+	--color-paper: #{colors.$color-paper};
+	--color-primary: #{colors.$color-primary};
+	--color-text-light: #{colors.$color-light};
+
 	--font-family-mono: "IPM", ui-monospace, SFMono-Regular, Menlo, Monaco,
 		Consolas, "Liberation Mono", "Courier New", monospace;
 
-	--color-paper: #{colors.$color-paper};
-	--color-ink: #{colors.$color-ink};
-	--color-primary: #{colors.$color-primary};
-
 	--flow-space: var(--space-s);
-	--max-width: 80rem;
-	--gutter: var(--space-s-l);
+	--gutter: var(--space-s-m);
+	--wrapper-max-width: 100vw;
 }
