Squelette article.html

--- a/src/scss/abstract/_variables_colors.scss
+++ b/src/scss/abstract/_variables_colors.scss
@@ -1,10 +1,62 @@
 // Couleurs
 
-$color-black: hsl(0, 0%, 0%);
-$color-green: hsl(90, 100%, 61%);
-$color-yellow: hsl(59, 90%, 50%);
-$color-white: hsl(255, 100%, 100%);
-$color-ink: $color-white;
-$color-light: $color-white;
-$color-paper: $color-black;
-$color-primary: $color-green;
+$base: (
+	"black": hsl(0, 0%, 0%),
+	"white": hsl(0, 0%, 100%),
+	"silver": hsl(0, 0%, 87%),
+);
+
+// $green: (
+// 	"10": hsl(98, 100%, 92%),
+// 	"50": hsl(90, 100%, 61%),
+// 	"60": hsl(95, 74%, 47%),
+// );
+
+$green: (
+	5: hsl(92, 100%, 97%),
+	10: hsl(90, 100%, 93%),
+	20: hsl(90, 100%, 85%),
+	30: hsl(90, 100%, 77%),
+	40: hsl(90, 100%, 69%),
+	50: hsl(90, 100%, 61%),
+	60: hsl(90, 100%, 50%),
+	70: hsl(90, 100%, 39%),
+	80: hsl(90, 100%, 28%),
+	90: hsl(90, 100%, 17%),
+	95: hsl(91, 100%, 12%),
+);
+
+$orange: (
+	5: hsl(13, 100%, 92%),
+	10: hsl(14, 100%, 88%),
+	20: hsl(14, 100%, 80%),
+	30: hsl(14, 100%, 72%),
+	40: hsl(14, 100%, 64%),
+	50: hsl(14, 100%, 56%),
+	60: hsl(14, 100%, 45%),
+	70: hsl(14, 100%, 34%),
+	80: hsl(14, 100%, 23%),
+	90: hsl(14, 100%, 12%),
+	95: hsl(14, 100%, 7%),
+);
+
+$yellow: (
+	50: hsl(59, 90%, 50%),
+);
+
+$red: (
+	60: hsl(3, 100%, 61%),
+);
+
+$gray: (
+	60: hsl(0, 0%, 67%),
+);
+
+$blue: (
+	40: hsl(210, 100%, 50%),
+	50: hsl(210, 100%, 42%),
+	60: hsl(210, 100%, 33%),
+	70: hsl(210, 100%, 25%),
+	80: hsl(210, 100%, 17%),
+	90: hsl(210, 100%, 7%),
+);
