--- a/src/scss/blocks/_icon.scss
+++ b/src/scss/blocks/_icon.scss
@@ -3,9 +3,14 @@
 	width: var(--icon-size, 1em);
 }
 
-.icon-burger {
-	--btn-svg-width: 2em;
-	--btn-svg-height: 2em;
-	fill: none;
-	stroke: var(--color-primary);
+.icon-download {
+	stroke: currentColor;
+	// margin-top: -0.25em;
 }
+
+// .icon-burger {
+// 	--btn-svg-width: 2em;
+// 	--btn-svg-height: 2em;
+// 	fill: none;
+// 	stroke: var(--color-primary);
+// }
