--- a/src/scss/utilities/_text.scss
+++ b/src/scss/utilities/_text.scss
@@ -1,8 +1,8 @@
 // Text utilities
 
-.text-light {
-	color: var(--color-text-light);
-}
+// .text-light {
+// 	color: var(--color-text-light);
+// }
 
 .text-primary {
 	color: var(--color-primary);
