--- a/src/scss/blocks/_article.scss
+++ b/src/scss/blocks/_article.scss
@@ -1,10 +1,81 @@
+@use "../abstract/variables_colors" as colors;
+@use "sass:map";
+@use "sass:color";
+
 .article {
 	max-width: 50rem;
-	margin: auto;
+	margin-inline: auto;
+	margin-block-start: var(--space-xl-2xl);
+	margin-top: var(--space-2xl-3xl);
 }
 
-// .article__header {}
+.article_header {
+	.prose & :is(p) {
+		max-width: unset;
+	}
+}
 
-.article__content {
-	margin-top: var(--space-xl);
+.article_content {
+	margin-top: var(--space-xl-2xl);
+}
+
+.article_title {
+	color: var(--color-secondary);
+}
+
+// Surtitre
+.article_leadin-title {
+	text-transform: uppercase;
+	font-weight: 600;
+	font-size: var(--step--1);
+	letter-spacing: 0.1em;
+	color: map.get(colors.$orange, 60);
+}
+
+.article_subtitle {
+	font-size: var(--step-2);
+	font-weight: 600;
+	color: var(--color-ink);
+}
+
+.article_desc {
+	--flow-space: var(--space-l);
+	font-size: var(--step-1);
+	margin-top: var(--space-xl-2xl);
+}
+
+.article_documents {
+	& .spip_documents {
+		&:first-of-type {
+			margin-top: var(--flow-space);
+		}
+	}
+}
+
+.article_notes {
+	--gutter: var(--space-m) var(--space-s);
+	position: relative;
+
+	div:first-child {
+		&::before {
+			content: "";
+			width: 100px;
+			height: 1px;
+			background-color: var(--color-secondary);
+			display: block;
+			position: absolute;
+			top: calc(var(--space-m) * -1);
+		}
+	}
+
+	p {
+		font-size: var(--step--1);
+		max-width: 40ch;
+	}
+}
+
+.article_hero-image {
+	aspect-ratio: 2/1;
+	object-fit: cover;
+	margin-inline: auto;
 }
