--- a/src/scss/global/_button.scss
+++ b/src/scss/global/_button.scss
@@ -1,3 +1,7 @@
+@use "../abstract/variables_colors" as colors;
+@use "sass:map";
+@use "sass:color";
+
 .button {
 	display: inline-flex;
 	align-items: center;
@@ -20,10 +24,21 @@
 		fill: currentColor;
 		transform: translateY(-0.2ex);
 	}
+
+	&:hover {
+		box-shadow: 0px 5px 5px -3px color.adjust(map.get(colors.$green, 70), $alpha:
+						-0.9),
+			0px 8px 8px 1px
+				color.adjust(map.get(colors.$green, 70), $alpha: -0.8),
+			0px 3px 8px 2px
+				color.adjust(map.get(colors.$green, 70), $alpha: -0.8);
+		transition: transform 0.2s linear, box-shadow 0.2s linear,
+			filter 0.4s ease, background-color 0.3s ease;
+	}
 }
 
-.button {
-	background-color: transparent;
-	border-radius: 100%;
-	padding: 3px;
-}
+// .button {
+// 	background-color: transparent;
+// 	border-radius: 100%;
+// 	padding: 3px;
+// }
