--- a/src/scss/global/_headings.scss
+++ b/src/scss/global/_headings.scss
@@ -5,29 +5,31 @@ h4,
 h5,
 h6 {
 	font-family: inherit;
-	font-weight: 700;
+	font-weight: 600;
+	line-height: 1.1;
 }
 
 h1 {
-	font-size: var(--step-5);
-}
-
-h2 {
 	font-size: var(--step-4);
 }
 
-h3 {
+h2 {
 	font-size: var(--step-3);
 }
 
-h4 {
+h3 {
 	font-size: var(--step-2);
 }
 
-h5 {
+h4 {
 	font-size: var(--step-1);
+}
+
+h5 {
+	font-size: var(--step-0);
 }
 
 h6 {
 	font-size: var(--step-0);
+	font-style: italic;
 }
