--- a/src/scss/global/_index.scss
+++ b/src/scss/global/_index.scss
@@ -2,5 +2,9 @@
 @use "blockquotes";
 @use "button";
 @use "headings";
+@use "hr";
+@use "img";
+@use "ins";
 @use "links";
 @use "lists";
+@use "q";
