--- a/src/scss/utilities/_region.scss
+++ b/src/scss/utilities/_region.scss
@@ -1,4 +1,4 @@
 .region {
-	padding-top: var(--region-space-top, var(--space-2xl-3xl));
-	padding-bottom: var(--region-space-bottom, var(--space-2xl-3xl));
+	padding-top: var(--region-space-top, var(--space-xl-2xl));
+	padding-bottom: var(--region-space-bottom, var(--space-xl-2xl));
 }
