Rubrique et cards

--- a/src/scss/blocks/_index.scss
+++ b/src/scss/blocks/_index.scss
@@ -1,8 +1,12 @@
 @use "article";
 @use "b";
 @use "breadcrumb";
-@use "button-cta";
+// @use "button-cta";
+@use "card";
 @use "icon";
+@use "pagination";
+@use "pod";
 @use "prose";
+@use "rubrique";
 @use "site-content";
 @use "site-header";
