--- a/src/scss/blocks/_icon.scss
+++ b/src/scss/blocks/_icon.scss
@@ -5,7 +5,39 @@
 
 .icon-download {
 	stroke: currentColor;
-	// margin-top: -0.25em;
+}
+
+.icon-arrow {
+	--icon-size: 0.75em;
+	--icon-opacity: 0;
+	--icon-transform: none;
+	stroke: currentColor;
+	stroke-width: var(--icon-stroke-width, 4px);
+	transition: transform 0.3s ease-out, stroke 0.1s;
+
+	path:nth-of-type(1) {
+		transition: opacity 150ms cubic-bezier(0.215, 0.61, 0.355, 1);
+		opacity: var(--icon-opacity);
+	}
+
+	path:nth-of-type(2) {
+		transition: transform 150ms cubic-bezier(0.215, 0.61, 0.355, 1);
+		transform: var(--icon-transform);
+	}
+
+	a:hover & {
+		--icon-opacity: 1;
+		stroke: currentColor;
+		transform: transalteX(-8px);
+
+		&.icon-arrow-right {
+			--icon-transform: translateX(6px);
+		}
+
+		&.icon-arrow-left {
+			--icon-transform: translateX(-8px);
+		}
+	}
 }
 
 // .icon-burger {
