--- a/src/scss/blocks/_button-cta.scss
+++ b/src/scss/blocks/_button-cta.scss
@@ -2,59 +2,58 @@
 @use "sass:map";
 @use "sass:color";
 
-.button-cta {
-	&.button-cta--primary {
-		background-color: #{map.get(colors.$green, 70)};
-		color: #{map.get(colors.$blue, 90)};
-		border-radius: 4px;
-		padding: 0.5em 0.5em;
+// .button-cta {
+// 	// &[data-type="primary"] {
+// 	// 	background-color: #{map.get(colors.$green, 70)};
+// 	// 	color: #{map.get(colors.$blue, 90)};
+// 	// 	border-radius: 4px;
+// 	// 	padding: 0.5em 0.5em;
 
-		&:hover {
-			background-color: #{map.get(colors.$green, 50)};
-			// transition: background-color 0.3s ease;
-		}
-	}
+// 	// 	&:hover {
+// 	// 		background-color: #{map.get(colors.$green, 50)};
+// 	// 	}
+// 	// }
 
-	&.button-cta--icon-left {
-		& svg {
-			margin-right: 0.5em;
-		}
-	}
-	// color: currentColor;
-	// display: inline-flex;
-	// align-items: center;
-	// font-size: var(--step-0);
-	// line-height: 1.2;
-	// padding: 8px 8px 6px;
-	// padding: var(--buttonCta-padding, 0);
-	// white-space: nowrap;
-	// min-width: 10ch;
-	// min-height: 44px;
+// 	// &.button-cta--icon-left {
+// 	// 	& svg {
+// 	// 		margin-right: 0.5em;
+// 	// 	}
+// 	// }
+// 	// color: currentColor;
+// 	// display: inline-flex;
+// 	// align-items: center;
+// 	// font-size: var(--step-0);
+// 	// line-height: 1.2;
+// 	// padding: 8px 8px 6px;
+// 	// padding: var(--buttonCta-padding, 0);
+// 	// white-space: nowrap;
+// 	// min-width: 10ch;
+// 	// min-height: 44px;
 
-	// &.with-icon-left {
-	// 	svg {
-	// 		margin-right: 0.5em;
-	// 	}
-	// }
+// 	// &.with-icon-left {
+// 	// 	svg {
+// 	// 		margin-right: 0.5em;
+// 	// 	}
+// 	// }
 
-	// &.variant-button {
-	// 	background-color: var(--color-link);
-	// 	border-radius: 4px;
-	// 	color: var(--buttonCta-color, var(--color-link-invert));
-	// 	text-decoration: none;
+// 	// &.variant-button {
+// 	// 	background-color: var(--color-link);
+// 	// 	border-radius: 4px;
+// 	// 	color: var(--buttonCta-color, var(--color-link-invert));
+// 	// 	text-decoration: none;
 
-	// 	// &[data-state="disabled"],
-	// 	// &[disabled] {
-	// 	// 	background-color: var(--color-disabled);
-	// 	// }
-	// }
-}
+// 	// 	// &[data-state="disabled"],
+// 	// 	// &[disabled] {
+// 	// 	// 	background-color: var(--color-disabled);
+// 	// 	// }
+// 	// }
+// }
 
 // label
-.button-cta_label {
-	span {
-		font-size: var(--step--2);
-		// color: #{map.get(colors.$green, 40)};
-		transition: color 0.3s ease;
-	}
-}
+// .button-cta_label {
+// 	span {
+// 		font-size: var(--step--2);
+// 		// color: #{map.get(colors.$green, 40)};
+// 		transition: color 0.3s ease;
+// 	}
+// }
