Composition rubrique Qui sommes-nous ?

--- a/src/scss/blocks/_index.scss
+++ b/src/scss/blocks/_index.scss
@@ -1,8 +1,10 @@
 @use "article";
 @use "b";
+@use "banner";
 @use "breadcrumb";
 // @use "button-cta";
 @use "card";
+@use "hero-image";
 @use "icon";
 @use "pagination";
 @use "pod";
