--- a/src/scss/composition/_grid.scss
+++ b/src/scss/composition/_grid.scss
@@ -5,10 +5,16 @@
 		var(--grid-placement, auto-fill),
 		minmax(var(--grid-min-item-size, 16rem), 1fr)
 	);
-}
 
-.grid[data-layout="tiers"] {
-	--grid-placement: auto-fit;
-	--grid-min-item-size: clamp(16rem, 33%, 20rem);
-	--gutter: var(--space-2xl) var(--space-xl);
+	&[data-layout="tiers"] {
+		--grid-placement: auto-fit;
+		--grid-min-item-size: clamp(16rem, 33%, 20rem);
+		--gutter: var(--space-2xl) var(--space-xl);
+	}
+
+	&[data-layout="50-50"] {
+		--grid-placement: auto-fit;
+		--grid-min-item-size: clamp(16rem, 50vw, 28rem);
+		--gutter: var(--space-2xl) var(--space-xl);
+	}
 }
