--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -5,7 +5,7 @@
 // @use "sass:color";
 
 .card {
-	--flow-space: var(--space-s-m);
+	// --flow-space: var(--space-s-m);
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
@@ -39,6 +39,7 @@
 }
 
 .card_content {
+	--flow-space: var(--space-s-m);
 	a {
 		color: var(--color-link);
 		text-decoration: none;
