--- a/src/scss/composition/_cluster.scss
+++ b/src/scss/composition/_cluster.scss
@@ -2,6 +2,6 @@
 	display: flex;
 	flex-wrap: wrap;
 	gap: var(--gutter, 1rem);
-	justify-content: flex-start;
-	align-items: center;
+	justify-content: var(--cluster-v-alignment, flex-start);
+	align-items: var(--cluster-h-alignment, center);
 }
