--- a/src/scss/global/_body.scss
+++ b/src/scss/global/_body.scss
@@ -3,6 +3,7 @@
 body {
 	display: flex;
 	flex-direction: column;
+	height: 100%;
 	overflow-x: hidden;
 	background-color: var(--color-paper);
 	color: var(--color-ink);
