--- a/src/scss/global/_button.scss
+++ b/src/scss/global/_button.scss
@@ -3,26 +3,30 @@
 @use "sass:color";
 
 .button {
+	-webkit-appearance: button; // Safari otherwise prevents some styles
+	appearance: none;
 	display: inline-flex;
 	align-items: center;
+	justify-content: center;
 	border: 0;
 	border-radius: var(--border-radius-base, 0);
 	cursor: pointer;
+	font-weight: 600;
 	line-height: 1 !important;
 	margin: 0; // Firefox and Safari have margin
+	min-height: 44px;
+	padding: 0.25em 0.75em;
 	overflow: visible; // Edge hides overflow
 	position: relative;
 	text-transform: none; // Firefox inherits text-transform
 	text-decoration: none;
 	white-space: nowrap;
-	-webkit-appearance: button; // Safari otherwise prevents some styles
-	appearance: none;
 
 	& svg {
 		width: var(--icon-size, 1em);
 		height: var(--icon-size, 1em);
 		fill: currentColor;
-		transform: translateY(-0.2ex);
+		// transform: translateY(-0.2ex);
 	}
 
 	&[data-type="primary"] {
@@ -32,32 +36,76 @@
 		padding: 0.5em 0.5em;
 
 		&:hover {
-			box-shadow: 0px 5px 5px -3px color.adjust(map.get(colors.$green, 70), $alpha:
+			box-shadow: 0px 5px 5px -3px color.adjust(map.get(colors.$green, 80), $alpha:
 							-0.9),
 				0px 8px 8px 1px
-					color.adjust(map.get(colors.$green, 70), $alpha: -0.8),
+					color.adjust(map.get(colors.$green, 80), $alpha: -0.8),
 				0px 3px 8px 2px
-					color.adjust(map.get(colors.$green, 70), $alpha: -0.8);
+					color.adjust(map.get(colors.$green, 80), $alpha: -0.8);
 			transition: transform 0.2s linear, box-shadow 0.2s linear,
-				filter 0.4s ease, background-color 0.3s ease;
+				background-color 0.3s ease;
+		}
+	}
+
+	&[data-type="secondary"] {
+		background-color: var(--color-paper);
+		color: var(--color-link);
+
+		&:hover {
+			box-shadow: 0px 5px 5px -3px color.adjust(map.get(colors.$blue, 90), $alpha:
+							-0.9),
+				0px 8px 8px 1px
+					color.adjust(map.get(colors.$blue, 90), $alpha: -0.8),
+				0px 3px 8px 2px
+					color.adjust(map.get(colors.$blue, 90), $alpha: -0.8);
+			transition: transform 0.2s linear, box-shadow 0.2s linear,
+				background-color 0.3s ease;
+		}
+	}
+
+	&[data-type="secondary-reversed"] {
+		background-color: transparent;
+		color: var(--color-paper);
+
+		&:hover {
+			background-color: var(--color-paper);
+			color: var(--color-link);
+			box-shadow: 0px 5px 5px -3px color.adjust(map.get(colors.$blue, 90), $alpha:
+							-0.9),
+				0px 8px 8px 1px
+					color.adjust(map.get(colors.$blue, 90), $alpha: -0.8),
+				0px 3px 8px 2px
+					color.adjust(map.get(colors.$blue, 90), $alpha: -0.8);
+			transition: transform 0.2s linear, box-shadow 0.2s linear,
+				color 0.3s ease, background-color 0.3s ease;
 		}
 	}
 
 	&[data-type="link"] {
-		background-color: var(--paper);
+		background-color: transparent;
 		color: var(--color-link);
 		padding: 0.5em 0.5em;
 	}
 
+	&[data-type="link-reversed"] {
+		background-color: transparent;
+		color: var(--color-paper);
+
+		&:hover {
+			background-color: var(--color-paper);
+			color: var(--color-primary);
+		}
+	}
+
 	&.with-icon-left {
-		align-items: flex-end;
+		// align-items: flex-end;
 		& svg {
 			margin-right: 0.5em;
 		}
 	}
 
 	&.with-icon-right {
-		align-items: flex-end;
+		// align-items: flex-end;
 		& svg {
 			margin-left: 0.5em;
 		}
