--- a/src/scss/blocks/_pod.scss
+++ b/src/scss/blocks/_pod.scss
@@ -8,6 +8,8 @@
 	&--banner {
 		background-color: map.get(colors.$green, 70);
 		color: var(--color-paper);
+		margin-top: var(--space-m-l);
+		margin-bottom: var(--space-m-l);
 		padding: var(--space-l-xl);
 	}
 
