--- a/src/scss/utilities/_gap.scss
+++ b/src/scss/utilities/_gap.scss
@@ -3,3 +3,15 @@
 .gap-top-5 {
 	margin-top: var(--space-2xl-3xl);
 }
+
+.gap-top-4 {
+	margin-top: var(--space-xl-2xl);
+}
+
+.gap-top-3 {
+	margin-top: var(--space-l-xl);
+}
+
+.gap-bottom-4 {
+	margin-bottom: var(--space-xl-2xl);
+}
