--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -9,6 +9,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
+	transition: transform 0.5s cubic-bezier(0.5, 0.05, 0.2, 1.5);
 
 	&::before {
 		background-color: map.get(colors.$green, 90);
@@ -21,6 +22,8 @@
 	}
 
 	&:hover {
+		transform: translateY(-0.2em) scale(1.01);
+
 		&::before {
 			background-color: var(--color-primary);
 		}
@@ -71,4 +74,34 @@
 
 .card_button-more {
 	margin-left: -8px;
+}
+
+.card[data-type="support"] {
+	background-color: map.get(colors.$green, 90);
+	padding: 6px;
+
+	&:nth-child(1) {
+		background-color: map.get(colors.$blue, 60);
+	}
+
+	&:nth-child(2) {
+		background-color: map.get(colors.$blue, 70);
+	}
+
+	&:nth-child(3) {
+		background-color: map.get(colors.$blue, 80);
+	}
+
+	&::before {
+		display: none;
+	}
+
+	& .card_content {
+		padding: 0 var(--space-s);
+		margin-top: var(--space-s);
+	}
+
+	& .card_media + .card_content {
+		margin-top: 0;
+	}
 }
