--- a/src/scss/abstract/_variables_colors.scss
+++ b/src/scss/abstract/_variables_colors.scss
@@ -15,6 +15,7 @@ $green: (
 	50: hsl(90, 100%, 61%),
 	60: hsl(90, 100%, 50%),
 	70: hsl(90, 100%, 39%),
+	//#9cff38
 	80: hsl(90, 100%, 28%),
 	90: hsl(90, 100%, 17%),
 	95: hsl(91, 100%, 12%),
@@ -35,7 +36,31 @@ $orange: (
 );
 
 $yellow: (
+	5: hsl(51, 100%, 86%),
+	10: hsl(51, 100%, 82%),
+	20: hsl(51, 100%, 74%),
+	30: hsl(51, 100%, 66%),
+	40: hsl(50, 100%, 58%),
+	50: hsl(51, 100%, 50%),
+	60: hsl(51, 100%, 39%),
+	70: hsl(50, 100%, 28%),
+	80: hsl(50, 100%, 17%),
+	90: hsl(50, 100%, 6%),
+	95: hsl(40, 100%, 1%),
+);
+
+$lemon: (
+	5: hsl(59, 89%, 86%),
+	10: hsl(59, 89%, 82%),
+	20: hsl(59, 89%, 74%),
+	30: hsl(59, 90%, 66%),
+	40: hsl(59, 90%, 58%),
 	50: hsl(59, 90%, 50%),
+	60: hsl(59, 90%, 39%),
+	70: hsl(59, 90%, 28%),
+	80: hsl(59, 91%, 17%),
+	90: hsl(60, 87%, 6%),
+	95: hsl(60, 100%, 0%),
 );
 
 $red: (
@@ -58,4 +83,18 @@ $blue: (
 	80: hsl(210, 100%, 20%),
 	90: hsl(210, 100%, 7%),
 	95: hsl(210, 100%, 4%),
+);
+
+$purple: (
+	5: hsl(285, 77%, 86%),
+	10: hsl(284, 78%, 83%),
+	20: hsl(284, 78%, 75%),
+	30: hsl(285, 78%, 67%),
+	40: hsl(284, 78%, 59%),
+	50: hsl(284, 78%, 51%),
+	60: hsl(285, 78%, 39%),
+	70: hsl(284, 78%, 29%),
+	80: hsl(285, 78%, 18%),
+	90: hsl(284, 76%, 7%),
+	95: hsl(285, 67%, 1%),
 );
