--- a/src/scss/blocks/_pod.scss
+++ b/src/scss/blocks/_pod.scss
@@ -18,4 +18,18 @@
 		top: var(--space-l);
 		align-self: start;
 	}
+
+	&--article-related {
+		background-color: map.get(colors.$green, 70);
+		margin-top: var(--space-2xl-3xl);
+		margin-bottom: var(--space-2xl-3xl);
+		padding-top: var(--space-l-xl);
+		padding-bottom: var(--space-l-xl);
+	}
+}
+
+.pod_heading {
+	.pod--article-related & {
+		color: map.get(colors.$blue, 95);
+	}
 }
