--- a/src/scss/composition/_grid.scss
+++ b/src/scss/composition/_grid.scss
@@ -1,4 +1,5 @@
 .grid {
+	--gutter: var(--space-2xl) var(--space-xl);
 	display: grid;
 	gap: var(--gutter, var(--space-s-m));
 	grid-template-columns: repeat(
@@ -9,12 +10,20 @@
 	&[data-layout="tiers"] {
 		--grid-placement: auto-fit;
 		--grid-min-item-size: clamp(16rem, 33%, 20rem);
-		--gutter: var(--space-2xl) var(--space-xl);
 	}
 
 	&[data-layout="50-50"] {
 		--grid-placement: auto-fit;
 		--grid-min-item-size: clamp(16rem, 50vw, 28rem);
-		--gutter: var(--space-2xl) var(--space-xl);
+	}
+
+	&--fill {
+		&[data-layout="tiers"] {
+			--grid-placement: auto-fill;
+		}
+	}
+
+	&--gutter-xl {
+		--gutter: var(--space-xl);
 	}
 }
