Ajout site-footer

--- a/src/scss/blocks/_icon.scss
+++ b/src/scss/blocks/_icon.scss
@@ -41,9 +41,4 @@
 	}
 }
 
-// .icon-burger {
-// 	--btn-svg-width: 2em;
-// 	--btn-svg-height: 2em;
-// 	fill: none;
-// 	stroke: var(--color-primary);
-// }
+// .icon-social {}
