--- a/src/scss/blocks/_index.scss
+++ b/src/scss/blocks/_index.scss
@@ -11,4 +11,7 @@
 @use "prose";
 @use "rubrique";
 @use "site-content";
+@use "site-footer";
 @use "site-header";
+@use "site-logo";
+@use "social";
