--- a/src/scss/utilities/_gap.scss
+++ b/src/scss/utilities/_gap.scss
@@ -12,6 +12,14 @@
 	margin-top: var(--space-l-xl);
 }
 
+.gap-top-2 {
+	margin-top: var(--space-m-l);
+}
+
+.gap-bottom-5 {
+	margin-bottom: var(--space-2xl-3xl);
+}
+
 .gap-bottom-4 {
 	margin-bottom: var(--space-xl-2xl);
 }
