--- a/src/scss/abstract/_variables_colors.scss
+++ b/src/scss/abstract/_variables_colors.scss
@@ -67,8 +67,21 @@ $red: (
 	60: hsl(3, 100%, 61%),
 );
 
+// $gray: (
+// 	60: hsl(0, 0%, 67%),
+// );
+
 $gray: (
-	60: hsl(0, 0%, 67%),
+	5: hsl(240, 4%, 95%),
+	10: hsl(240, 4%, 91%),
+	20: hsl(240, 4%, 82%),
+	30: hsl(240, 4%, 73%),
+	40: hsl(240, 4%, 64%),
+	50: hsl(240, 4%, 46%),
+	60: hsl(240, 4%, 38%),
+	70: hsl(240, 4%, 31%),
+	80: hsl(240, 4%, 15%),
+	90: hsl(240, 4%, 8%),
 );
 
 $blue: (
