--- a/src/scss/theme/_index.scss
+++ b/src/scss/theme/_index.scss
@@ -1,5 +1,6 @@
 @use "../abstract/variables_colors" as colors;
 @use "sass:map";
+@use "sass:color";
 @use "utopia-typo";
 @use "utopia-space";
 
@@ -10,7 +11,7 @@
 	--color-paper: #{map.get(colors.$blue, 90)};
 	--color-contrast: #{map.get(colors.$green, 50)};
 	--color-link: #{map.get(colors.$green, 50)};
-	--color-link-visited: #{map.get(colors.$gray, 60)};
+	--color-link-visited: #{map.get(colors.$green, 10)};
 	--color-link-contrast: #{map.get(colors.$blue, 90)};
 	--color-primary: #{map.get(colors.$green, 50)};
 	--color-secondary: #{map.get(colors.$orange, 50)};
@@ -24,6 +25,9 @@
 	// Marges
 	--flow-space: var(--space-m-l);
 	--gutter: var(--space-s-m);
+
+	//
+	--border-radius-base: 4px;
 
 	// Containers
 	--wrapper-max-width: 100vw;
