--- a/src/scss/blocks/_site-header.scss
+++ b/src/scss/blocks/_site-header.scss
@@ -8,7 +8,7 @@
 	padding-top: var(--space-s);
 }
 
-.site-header__container {
+.site-header_container {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
@@ -26,7 +26,7 @@
 	}
 }
 
-.site-header__logo {
+.site-header_logo {
 	& svg {
 		width: 80px;
 
