--- a/src/scss/utilities/_wrapper.scss
+++ b/src/scss/utilities/_wrapper.scss
@@ -1,5 +1,7 @@
 .wrapper {
-	margin-inline: auto;
+	// margin-inline: auto;
+	margin-left: auto;
+	margin-right: auto;
 	max-width: var(--wrapper-max-width);
 	max-width: clamp(16rem, var(--wrapper-max-width, 100vw), 80rem);
 	padding-left: var(--gutter);
