Fix : rétablir couleur des intertitres

--- a/src/scss/blocks/_pod.scss
+++ b/src/scss/blocks/_pod.scss
@@ -65,10 +65,11 @@
 }
 
 .pod_heading {
-	color: var(--color-paper);
+	color: var(--color-secondary);
 	font-size: var(--step-4);
 
 	.pod--article-related & {
+		color: var(--color-paper);
 		margin-bottom: var(--space-l-xl);
 		font-size: var(--step-3);
 	}
