Formulaire d'abonnement newsletter avec Mailsubscribers

--- a/src/scss/global/_form.scss
+++ b/src/scss/global/_form.scss
@@ -36,7 +36,7 @@ textarea {
 	color: var(--color-ink);
 	font: inherit;
 	font-size: var(--step-1);
-	line-height: 1;
+	line-height: normal;
 	padding: 0.5em 0.5em 0.375em;
 	width: 100%;
 	appearance: none;
