--- a/src/scss/blocks/_banner.scss
+++ b/src/scss/blocks/_banner.scss
@@ -3,11 +3,15 @@
 
 .banner {
 	--cluster-v-alignment: center;
+	--banner-desc-max-width: 60ch;
+	--flow-space: var(--space-m);
 
 	&--support {
-		& .banner_desc {
-			max-width: 50ch;
-		}
+		--banner-desc-max-width: 50ch;
+	}
+
+	&--subscribe-nl {
+		--banner-desc-max-width: 700px;
 	}
 }
 
@@ -20,5 +24,5 @@
 	font-weight: 600;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 60ch;
+	max-width: var(--banner-desc-max-width);
 }
