Retirer le code css inutile

--- a/src/scss/print/_uca-print.scss
+++ b/src/scss/print/_uca-print.scss
@@ -35,11 +35,11 @@ body {
 	}
 }
 
-.full-bleed {
-	width: 100%;
-	margin-left: auto;
-	transform: none;
-}
+// .full-bleed {
+// 	width: 100%;
+// 	margin-left: auto;
+// 	transform: none;
+// }
 
 .pod--banner {
 	border: 1px solid;
