--- a/src/scss/utilities/_index.scss
+++ b/src/scss/utilities/_index.scss
@@ -1,10 +1,10 @@
-@use "all-center";
+// @use "all-center";
 @use "gap";
-@use "offset";
+// @use "offset";
 // @use "pad";
 @use "position";
 @use "region";
 // @use "repel";
-@use "stack";
+// @use "stack";
 @use "text";
 @use "wrapper";
